kubernetes/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/name: app-ingress
spec:
  tls:
  - hosts:
    - test.mytest.com
    secretName: tls-secret
  rules:
  - host: test.mytest.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /mongo-express(/|$)(.*)
        backend:
          service:
            name: mongo-express-service
            port: 
              number: 8081
      - pathType: ImplementationSpecific
        path: /api(/|$)(.*)
        backend:
          service:
            name: weather-forecast-service
            port: 
              number: 8081
